# imatpy

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.html  README.md  README.qmd  pyproject.toml
.github/workflows/: build.yml  python-package.yml  tests.yml
docs/: conf.py  imatpy.rst  index.rst  intro.rst  modules.rst  usage.rst
imatpy/: __init__.py  expr_utils.py  imat.py  model_creation.py  model_utils.py  parse_gpr.py
tests/: test_expr_utils.py  test_imat.py  test_model_creation.py  test_model_utils.py  test_parse_gpr.py
tests/data/: test_model.json  test_model.mat  test_model.xml  test_model.yaml  test_model_reaction_weights.csv  textbook_model.json  textbook_model.mat  textbook_model.yaml
