[tool.poetry]
name = "imatpy"
version = "0.1.0"
description = "\"Python implementation of the Integrative Metabolic Analysis Tool (iMAT) algorithm for context specific metabolic modeling.\""
authors = ["Braden Griebel"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
cobra = "^0.27.0"
scipy = "^1.11.3"
numpy = "^1.26.0"
pandas = ">=1.0.0, <2.0.0"
optlang = "^1.7.0"
gurobipy = {version = "^10.0.3", optional = true}
sympy = "^1.12"

[tool.poetry.group.dev.dependencies]
Sphinx = "^7.2.6"
pytest = "^7.4.2"
black = "^23.9.1"
pylint = "^3.0.1"
sphinx-rtd-theme = "^1.3.0"


[tool.poetry.group.extras.dependencies]
gurobipy = "^10.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
