[project]
name = "imatpy"
version = "0.1.0"
description = "Python implementation of the Integrative Metabolic Analysis Tool (iMAT) algorithm for context specific metabolic modeling."
authors = [{ name = "Braden Griebel" }]
requires-python = ">3.9,<3.11"
readme = "README.md"
license = "MIT"
dependencies = [
    "cobra>=0.27.0",
    "numpy>=1.26.0",
    "pandas>=1.0.0",
    "optlang>=1.8.3",
    "sympy>=1.12",
    "scipy>=1.12.0",
]

[project.optional-dependencies]
gurobipy = ["gurobipy>=11.0.0"]
cplex = ["cplex>=22.1.1.0"]

[dependency-groups]
dev = [
    "pytest>=7.4.2,<8",
    "ruff>=0.12.0",
]
docs = [
    "sphinx>=7.2.6,<8",
    "sphinx-exec-code>=0.10,<0.11",
    "sphinx-rtd-theme>=1.3.0,<2",
    "jupyter>=1.0.0,<2",
]

[tool.uv]
default-groups = [
    "dev",
    "docs",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
